update 3000UltraMax
- змінив респонси Water
- додав провірку ід
- змінив swager
